--- a/product/templates/product/products.html
+++ b/product/templates/product/products.html
@@ -14,7 +14,7 @@
 <div class="container">
             {{ scent }}
 
-            <div class="row">
+            <div class="row gy-4">
                 {% for products in product %}
                 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <div class="card h-100 border-0">
