--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -5,6 +5,11 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
+   <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
 <h1>{% trans "Sign Up" %}</h1>
 
 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
