--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -6,6 +6,11 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
+   <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
 
 <h1>{% trans "Sign In" %}</h1>
 
