--- a/templates/base.html
+++ b/templates/base.html
@@ -20,8 +20,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
         integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/70abe2c3f7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     {% endblock %}
 
     <title>Custom Candles</title>
@@ -49,14 +57,73 @@
                         <li class="nav-item mx-2">
                             <a class="nav-link" href="#">Scents</a>
                         </li>
+
+                        {% if request.user.is_authenticated %}
+                        <li class="nav-item mx-2 d-md-none d-lg-none d-xl-none">
+                            <a class="nav-link" href="#">
+                                <div class="text-center">
+                                    <div><i class="fas fa-user-alt fa-lg"></i></div>
+                                    <p class="my-0">
+                                        My Account
+                                    </p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="nav-item mx-2 d-md-none d-lg-none d-xl-none">
+                            <a class="nav-link" href="{% url 'account_logout' %}">
+                                <div class="text-center">
+                                    <div><i class="fas fa-sign-out-alt fa-lg"></i></div>
+                                    <p class="my-0">
+                                        Logout
+                                    </p>
+                                </div>
+                            </a>
+                        </li>
+                        {% else %}
+                        <li class="nav-item mx-2 d-md-none d-lg-none d-xl-none ">
+                            <a class="nav-link" aria-current="page" href="{% url 'account_login' %}">
+                                <div class="text-center">
+                                    <div><i class="fas fa-sign-in-alt fa-lg"></i></div>
+                                    <p class="my-0">
+                                        Login
+                                    </p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="nav-item mx-2 d-md-none d-lg-none d-xl-none">
+                            <a class="nav-link" href="{% url 'account_signup' %}">
+                                <div class="text-center">
+                                    <div><i class="fas fa-user-plus fa-lg"></i></div>
+                                    <p class="my-0">
+                                        Register
+                                    </p>
+                                </div>
+                            </a>
+                        </li>
+                        {% endif %}
+                        <li class="nav-item mx-2 d-md-none d-lg-none d-xl-none">
+                            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                                href="{% url 'view_bag' %}">
+                                <div class="text-center">
+                                    <div><i class="fas fa-shopping-basket fa-lg"></i></div>
+                                    <p class="my-0">
+                                        {% if grand_total %}
+                                        ${{ grand_total|floatformat:2 }}
+                                        {% else %}
+                                        $0.00
+                                        {% endif %}
+                                    </p>
+                                </div>
+                            </a>
+                        </li>
                     </ul>
                 </div>
-                <div class="col d-none d-sm-block d-md-none d-lg-block">
+                <div class="col d-none d-lg-block">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         {% if request.user.is_authenticated %}
                         <li class="nav-item mx-2">
                             <a class="nav-link" href="#">
-                                     <div class="text-center">
+                                <div class="text-center">
                                     <div><i class="fas fa-user-alt fa-lg"></i></div>
                                     <p class="my-0">
                                         My Account
@@ -115,7 +182,16 @@
                 </div>
             </div>
         </nav>
+
     </header>
+    <div class="container-fluid offer-banner">
+        <div class="row text-center">
+            <div class="col">
+                <h4 class="logo-font my-1">Get $5 off when you buy 3 products</h4>
+            </div>
+        </div>
+    </div>
+
 
 
 
@@ -130,11 +206,12 @@
     {% endblock %}
 
     {% block postloadjs %}
+
     {% endblock %}
 
 
 </body>
-<footer class="footer mt-auto py-3">
+<footer class="footer mt-auto fixed-bottom">
 
 
     <div class="container-sm">
