--- a/templates/base.html
+++ b/templates/base.html
@@ -181,16 +181,24 @@
                     </ul>
                 </div>
             </div>
-        </nav>
 
-    </header>
-    <div class="container-fluid offer-banner">
-        <div class="row text-center">
-            <div class="col">
-                <h4 class="logo-font my-1">Get $5 off when you buy 3 products</h4>
+        </nav>
+        <div class="container nav-spacer">
+            <div class="row">
+                <div class="col"></div>
             </div>
         </div>
-    </div>
+        <div class="container-fluid offer-banner">
+            <div class="row text-center">
+                <div class="col">
+                    <h4 class="logo-font my-1">Get $5 off when you buy 3 products</h4>
+                </div>
+            </div>
+        </div>
+
+
+
+    </header>
 
 
 
