--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -25,41 +25,39 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Item Image</th>
-                        <th scope="col">Item</th>
-                        <th scope="col">Scent</th>
-                        <th scope="col">Quantity</th>
-                        <th scope="col">Sub-Total</th>
+                        <th scope="col" class="text-center">Item Image</th>
+                        <th scope="col" class="text-center">Item</th>
+                        <th scope="col" class="text-center">Scent</th>
+                        <th scope="col" class="text-center">Quantity</th>
+                        <th scope="col" class="text-end">Sub-Total</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for item in bag_items %}
                     <tr>
-                        <th scope="row"></th>
-                        <td class="p-3 w-25">
+                        <td class="align-middle">
                             <img class="img-fluid rounded" src="{{ item.product.image.url }}">
                         </td>
-                        <td>{{ item.product.name }}</td>
-                        <td>{{ item.scent_one }}</td>
-                        <td class="py-3 w-25">
+                        <td class="p-3 w-25 align-middle text-center">{{ item.product.name }}</td>
+                        <td class="p-3 w-25 align-middle text-center">{{ item.scent_one }}</td>
+                        <td class="py-3 w-25 align-middle">
                             <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
                                 {% csrf_token %}
-                                <div class="form-group">
+                                <div class="form-group text-center">
                                     <div class="input-group">
                                         <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-sm btn-black rounded-0"
+                                            <button class="decrement-qty btn btn-sm rounded-0"
                                                 data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
                                                 <span>
                                                     <i class="fas fa-minus fa-sm"></i>
                                                 </span>
                                             </button>
                                         </div>
-                                        <input class="form-control form-control-sm qty_input" type="number"
+                                        <input class="form-control form-control-sm qty_input text-center" type="number"
                                             name="quantity" value="{{ item.quantity }}" min="1" max="99"
                                             data-item_id="{{ item.item_id }}" id="id_qty_{{ item.item_id }}">
                                         <div class="input-group-append">
-                                            <button class="increment-qty btn btn-sm btn-black rounded-0"
+                                            <button class="increment-qty btn btn-sm rounded-0"
                                                 data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
                                                 <span>
                                                     <i class="fas fa-plus fa-sm"></i>
@@ -70,11 +68,17 @@
                                     </div>
                                 </div>
                             </form>
-                            <a class="update-link text-info"><small>Update</small></a>
-                            <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"
-                                data-scent_one="{{ item.scent_one }}"><small>Remove</small></a>
+                            <div class="row">
+                                <div class="col">
+                                    <a class="update-link text-info"><small>Update</small></a>
+                                </div>
+                                <div class="col">
+                                    <a class="remove-item text-danger float-end" id="remove_{{ item.item_id }}"
+                                        data-scent_one="{{ item.scent_one }}"><small>Remove</small></a>
+                                </div>
+                            </div>
                         </td>
-                        <td>
+                        <td class="text-end py-3 w-25 align-middle">
                             <p class="my-0">${{ item.product.price | calc_subtotal:item.quantity }}</p>
                         </td>
                     </tr>
@@ -82,16 +86,30 @@
                 </tbody>
                 <tfoot>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td>
+
+                        <td colspan="5" class="text-end">
                             <h5><strong>Total: ${{ total|floatformat:2 }}</strong></h5>
                             <h5>Delivery: ${{ delivery|floatformat:2 }}</h5>
                             <h5>Discount: ${{ discount|floatformat:2 }}</h5>
                             <h4 class="mt-2"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="4" class="text-start">
+                            <a href="{% url 'shop' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                                <span class="icon">
+                                    <i class="fas fa-chevron-left"></i>
+                                </span>
+                                <span class="text-uppercase">Keep Shopping</span>
+                            </a>
+                        </td>
+                        <td colspan="1" class="float-end">
+                            <a href="{% url 'checkout' %}" class="btn add_button rounded-0 btn-lg">
+                                <span class="text-uppercase">Secure Checkout</span>
+                                <span class="icon">
+                                    <i class="fas fa-lock"></i>
+                                </span>
+                            </a>
                         </td>
                     </tr>
                 </tfoot>
