--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,7 +3,13 @@
 
     {% block content %}
 
-<div class="container jumbotron">
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+
+<div class="container-fluid jumbotron">
     <div class="p-3 p-md-4 mb-3 rounded card hero-image">
         <h1 class="display-4 text-light"><strong>Custom Candles</strong></h1>
         <p class="lead text-light">Relax and enjoy your favourite scents with custom candles delivered straight to your
