--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,7 +1,7 @@
-    {% extends "base.html" %}
-    {% load static %}
+{% extends "base.html" %}
+{% load static %}
 
-    {% block content %}
+{% block content %}
 
 <div class="container header-container">
     <div class="row">
@@ -79,7 +79,7 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <blockquote class="blockquote m-2 p-1">
-                                    <p class="m-0">I love to build new scents with custom candles!</p>
+                                    <p class="m-0">My favourite scent is Vanilla. It make my home smell amazing.</p>
                                     <p class="quote-name">Jenny - <cite title="quotefrom">Monkstown</cite></p>
                                 </blockquote>
                             </div>
@@ -127,8 +127,16 @@
             </div>
         </div>
     </div>
-
-
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
 </section>
 
 
