--- a/product/templates/product/product_detail.html
+++ b/product/templates/product/product_detail.html
@@ -18,10 +18,9 @@
                 <img class="img-fluid det_image" src="{{ product_det.image.url }}" alt="{{ product_det.name }}">
             </a>
 
-
         </div>
-        <div class="col-sm position-relative">
-            <form class="form position-absolute top-50 start-50 translate-middle" action="{% url 'add_to_bag' product_det.id %}" method="POST">
+        <div class="col-sm">
+            <form class="form" action="{% url 'add_to_bag' product_det.id %}" method="POST">
                 {% csrf_token %}
 
                 <h3 class="text-center">{{ product_det.name }}</h3>
@@ -43,11 +42,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="my-3 px-4">
+                <div class="my-5 px-4">
                     <button type="submit" class="btn add_button">Add to bag</button>
                     <input type="hidden" name="redirect_url" value="{{ request.path }}">
-
-                    <a href="{% url 'shop' %}" class="btn btn-outline-black rounded-0">
+                    <a href="{% url 'shop' %}" class="btn back_button rounded-0">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
                         </span>
@@ -55,11 +53,26 @@
                     </a>
                 </div>
             </form>
-
         </div>
-
     </div>
 </div>
+
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+
 
 
 
