--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,12 @@
     <script src="https://kit.fontawesome.com/70abe2c3f7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- stripe -->
+    <script src="https://js.stripe.com/v3/"></script>
 
+    {% endblock %}
+    
+    {% block extra_css %}
     {% endblock %}
 
     <title>Custom Candles</title>
@@ -59,7 +64,7 @@
                         </li>
 
                         {% if request.user.is_authenticated %}
-                        <li class="nav-item mx-2 d-md-none d-lg-none d-xl-none">
+                        <li class="nav-item mx-2 d-lg-none d-xl-none">
                             <a class="nav-link" href="#">
                                 <div class="text-center">
                                     <div><i class="fas fa-user-alt fa-lg"></i></div>
@@ -69,7 +74,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li class="nav-item mx-2 d-md-none d-lg-none d-xl-none">
+                        <li class="nav-item mx-2 d-lg-none d-xl-none">
                             <a class="nav-link" href="{% url 'account_logout' %}">
                                 <div class="text-center">
                                     <div><i class="fas fa-sign-out-alt fa-lg"></i></div>
@@ -80,7 +85,7 @@
                             </a>
                         </li>
                         {% else %}
-                        <li class="nav-item mx-2 d-md-none d-lg-none d-xl-none ">
+                        <li class="nav-item mx-2 d-lg-none d-xl-none ">
                             <a class="nav-link" aria-current="page" href="{% url 'account_login' %}">
                                 <div class="text-center">
                                     <div><i class="fas fa-sign-in-alt fa-lg"></i></div>
@@ -90,7 +95,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li class="nav-item mx-2 d-md-none d-lg-none d-xl-none">
+                        <li class="nav-item mx-2 d-lg-none d-xl-none">
                             <a class="nav-link" href="{% url 'account_signup' %}">
                                 <div class="text-center">
                                     <div><i class="fas fa-user-plus fa-lg"></i></div>
@@ -101,7 +106,7 @@
                             </a>
                         </li>
                         {% endif %}
-                        <li class="nav-item mx-2 d-md-none d-lg-none d-xl-none">
+                        <li class="nav-item mx-2 d-lg-none d-xl-none">
                             <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
                                 href="{% url 'view_bag' %}">
                                 <div class="text-center">
