--- a/product/templates/product/product_detail.html
+++ b/product/templates/product/product_detail.html
@@ -12,6 +12,7 @@
 
 <div class="container">
     <div class="row mb-5">
+
         <div class="col-sm">
 
             <a href="{{ product_det.image.url }}" target="_blank">
@@ -19,7 +20,7 @@
             </a>
 
         </div>
-        <div class="col-sm">
+        <div class="col-sm py-5">
             <form class="form" action="{% url 'add_to_bag' product_det.id %}" method="POST">
                 {% csrf_token %}
 
@@ -42,6 +43,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="my-3">
+                    <p class="mt-3"><strong>Price: </strong> ${{ product_det.price }} </p>
+                </div>
+
+
+
+
+
                 <div class="my-5 px-4">
                     <button type="submit" class="btn add_button">Add to bag</button>
                     <input type="hidden" name="redirect_url" value="{{ request.path }}">
