--- a/static/css/base.css
+++ b/static/css/base.css
@@ -229,3 +229,21 @@ footer {
 .remove-item {
     cursor: pointer;
 }
+
+
+/*--------------------------------------------toasts*/
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
