--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
     <script src="https://js.stripe.com/v3/"></script>
 
     {% endblock %}
-    
+
     {% block extra_css %}
     {% endblock %}
 
@@ -207,9 +207,22 @@
 
 
 
-
-    {% if messages %}
-    <div class="message-container"></div>
+     {% if messages %}
+        <div class="message-container">
+            {% for message in messages %}
+                {% with message.level as level %}
+                    {% if level == 40 %}
+                        {% include 'includes/toasts/toast_error.html' %}
+                    {% elif level == 30 %}
+                        {% include 'includes/toasts/toast_warning.html' %}
+                    {% elif level == 25 %}
+                        {% include 'includes/toasts/toast_success.html' %}
+                    {% else %}
+                        {% include 'includes/toasts/toast_info.html' %}
+                    {% endif %}
+                {% endwith %}
+            {% endfor %}
+        </div>
     {% endif %}
 
     {% block page_header %}
@@ -219,6 +232,9 @@
     {% endblock %}
 
     {% block postloadjs %}
+    <script type="text/javascript">
+        $('.toast').toast('show');
+    </script>
 
     {% endblock %}
 
