--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,8 @@
 
     {% block bootstrapjava %}
     <!-- Bootstrap CSS & Java -->
+
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
@@ -28,7 +30,8 @@
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/70abe2c3f7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
+  
     <!-- stripe -->
     <script src="https://js.stripe.com/v3/"></script>
 
@@ -233,7 +236,8 @@
 
     {% block postloadjs %}
     <script type="text/javascript">
-        $('.toast').toast('show');
+    $(document).ready(function () {
+        $('.toast').toast('show'); });
     </script>
 
     {% endblock %}
