update allauth templates

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -248,6 +248,8 @@ footer {
     height: 2px;
 }
 
+/*--------------------------------------------Allauth form formatting */
+
 /* Allauth form formatting */
 
 .allauth-form-inner-content p {
@@ -258,8 +260,6 @@ footer {
 .allauth-form-inner-content input {
     border-color: #000;
     border-radius: 0;
-    margin-top: 15px;
-    margin-bottom: 15px;
 }
 
 .allauth-form-inner-content label:not([for='id_remember']) {
@@ -288,7 +288,6 @@ footer {
     font-size: 1rem;
     line-height: 1.5;
     border-radius: 0;
-    
 
     /* standard bootstrap btn transitions */
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
