--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
 
                         {% if request.user.is_authenticated %}
                         <li class="nav-item mx-2 d-lg-none d-xl-none">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="{% url 'profile' %}">
                                 <div class="text-center">
                                     <div><i class="fas fa-user-alt fa-lg"></i></div>
                                     <p class="my-0">
@@ -130,7 +130,7 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         {% if request.user.is_authenticated %}
                         <li class="nav-item mx-2">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="{% url 'profile' %}">
                                 <div class="text-center">
                                     <div><i class="fas fa-user-alt fa-lg"></i></div>
                                     <p class="my-0">
