restart from old workspace

--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -48,4 +48,20 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   </p>
 </form>
 
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+
 {% endblock %}
