--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -1,4 +1,3 @@
-
 {% extends "account/base.html" %}
 
 {% load i18n %}
@@ -11,4 +10,19 @@
 <hr>
 
 <p>{% trans "This account is inactive." %}</p>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
 {% endblock %}
