--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,14 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col-6">
-                <div class="allauth-form-inner-content">
-                    {% block inner_content %}
-                    {% endblock %}
-                </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="allauth-form-inner-content">
+                {% block inner_content %}
+                {% endblock %}
             </div>
         </div>
     </div>
+</div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+
 {% endblock %}
