--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -5,13 +5,28 @@
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block inner_content %}
-    <hr>
-    <h2 class="logo-font mb-4">{% trans "Set Password" %}</h2>
-    <hr>
+<hr>
+<h2 class="logo-font mb-4">{% trans "Set Password" %}</h2>
+<hr>
 
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
+<form method="POST" action="{% url 'account_set_password' %}" class="password_set">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <input type="submit" name="action" value="{% trans 'Set Password' %}" />
+</form>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
 {% endblock %}
