--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
             <div class="container-fluid">
-                <a href="{% url 'home' %}" class="navbar-brand"> <img src="../media/logo.png"
+                <a href="{% url 'home' %}" class="navbar-brand"> <img src="/media/logo.png"
                         class="rounded-circle align-self-center p-1" alt="logo" height="100" width="100"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false"
@@ -63,7 +63,7 @@
                             <a class="nav-link" href="{% url 'shop' %}">View Products</a>
                         </li>
                         <li class="nav-item mx-2">
-                            <a class="nav-link" href="#">Scents</a>
+                            <a class="nav-link" href="{% url 'view_scents' %}">Scents</a>
                         </li>
 
                         {% if request.user.is_authenticated %}
@@ -254,7 +254,7 @@
                 <p> <i class="fas fa-envelope"></i> hello@custom_candles.ie </p>
             </div>
             <div class="col-sm-4 logo d-flex justify-content-center">
-                <img src="../media/logo.png" class="rounded-circle align-self-center p-1 d-none d-sm-block" alt="logo"
+                <img src="/media/logo.png" class="rounded-circle align-self-center p-1 d-none d-sm-block" alt="logo"
                     height="70" width="70">
             </div>
             <div class="col-sm-4 social-section">
