--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -73,7 +73,7 @@
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4 avatar">
-                            <img src="../media/testimonials/jennybenny.jpg" class="rounded-circle align-self-center p-1"
+                            <img src="testimonials/jennybenny.jpg" class="rounded-circle align-self-center p-1"
                                 alt="jennyreview" height="100" width="100">
                         </div>
                         <div class="col-md-8">
@@ -92,7 +92,7 @@
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4 avatar">
-                            <img src="../media/testimonials/tommytucker.jpg"
+                            <img src="testimonials/tommytucker.jpg"
                                 class="rounded-circle align-self-center p-1" alt="jennyreview" height="100" width="100">
                         </div>
                         <div class="col-md-8">
@@ -110,7 +110,7 @@
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4 avatar">
-                            <img src="../media/testimonials/michelle.jpg" class="rounded-circle align-self-center p-1"
+                            <img src="testimonials/michelle.jpg" class="rounded-circle align-self-center p-1"
                                 alt="jennyreview" height="100" width="100">
                         </div>
                         <div class="col-md-8">
